Revision history for App-moduleswhere

{{$NEXT}}

0.02   2011-04-28 18:21:51 CST

    note about Module::Info.
    show require error if any.

0.01   2011-04-27 14:34:19 CST

    Initial release.
